--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,137 @@
 body{
+    margin: 0;
+    padding: 0;
+    background color: black;
+    width: 100%;
+    height: 100%;
+    font-size: 62.5%;
+    box-sizing: border-box;
+
     
+}
+header{
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: 10rem;
+    color: white;
+    font-size: 1rem;
+    background-color: red;
+}
+header>a>img{
+    margin: 0 auto;
+    padding: 0;
+    width: 25%;
+    height: 10rem;
+    position: relative;
+    
+}
+header>nav{
+    width: 100%;
+    height:2rem; 
+    text-align: center;
+    position: relative;
+    top: -145px;
+
+}
+header>nav>ul{
+    list-style: none;
+    display: inline-block;
+    width: 100%;
+    margin: auto 0;
+    padding:0;
+    
+}
+header>nav>ul>li{
+    margin: 0;
+    padding: 15px;
+    display: inline-block;
+    text-transform: capitalize;
+    color: #ffffff; 
+}
+a{
+    text-decoration: none;
+    color:white;
+    font-size: 18px;
+}
+a:hover{
+
+    text-decoration: underline;
+}
+#sponsor{
+    width:16%;
+    height: 10rem;
+    float: right;
+    position: relative;
+    top: -250px;
+    margin-right: 50px;
+}
+
+main{
+    width: 70%;
+    height: 800px;
+    margin: 0 auto;
+    padding: 0;
+    background-color: purple;
+    box-sizing: border-box;
+    display: inline-block;
+    position: relative;
+    background: transparent;
+}
+
+section{
+    width: 80%;
+    height: 600px;
+    font-size: 16px;
+    margin: 0 auto;
+    padding: 0;  
+    display: inline;
+    background-color: aqua;
+    
+}
+#sec1{
+    height: 100%;
+    margin: auto 0;
+    padding: 0;
+    width:100%;
+}
+section>ul>li{
+    box-sizing: border-box;
+    display:block;
+    text-decoration: none;
+}
+#list{
+    margin: 0 auto;
+    padding: 0;
+    width:calc(100%/2);
+    height: 300px;
+    float: left;
+    text-align: center;
+
+}
+#info{
+    margin: 0 auto;
+    padding: 0;
+    width:calc(100%/2);
+    height:400px;
+    float: right;
+}
+#gm{
+    margin: 0 auto;
+    padding: 0;
+    color: blue;
+    font-size:12px;
+    text-decoration: none;
+}
+#gm:hover{
+    text-decoration: underline;
+}
+#sec2{
+    width: 80%;
+    height: 100px;
+    font-size: 16px;
+    margin: 0 auto;
+    padding: 0;  
+    box-sizing: border-box;
+    background-color: aqua;
 }
