--- a/css/style2.css
+++ b/css/style2.css
@@ -70,7 +70,7 @@ a:hover{
 }
 section{
     width: 100%;
-    margin-left: 50px;
+    margin-left:250px;
     text-align: center;
     
 }
@@ -79,7 +79,9 @@ section{
     
 }
 p{
-    width: 30%;
+    width: 60%;
     height: 300px;
     font-size: 15px;
+    text-align: center;
+    margin-left: 10px;
 }
