--- a/css/style2.css
+++ b/css/style2.css
@@ -85,3 +85,30 @@ p{
     text-align: center;
     margin-left: 10px;
 }
+footer{
+    margin: auto;
+    padding: 0px;
+    width: 80%;
+    height: 150px;
+    text-align: center;
+    letter-spacing: 20px
+}
+#copy{
+    width: 100%;
+    margin: auto 0;
+    padding: 0;
+    text-align: left;
+    letter-spacing: 0;
+    font-size: 12px;
+}
+#donate{
+    margin: auto;
+    padding:0;
+    text-align: center;
+    margin-left: 610px;
+    
+   
+}
+#face{
+    float: right;
+}
