--- a/css/style3.css
+++ b/css/style3.css
@@ -68,3 +68,44 @@ a:hover{
     top: -250px;
     margin-right: 50px;
 }
+main{
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+}
+article{
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+}
+p{
+    width: 80%;
+    font-size: 12px;
+}
+footer{
+    margin: auto;
+    padding: 0px;
+    width: 80%;
+    height: 150px;
+    text-align: center;
+    letter-spacing: 20px
+}
+#copy{
+    width: 100%;
+    margin: auto 0;
+    padding: 0;
+    text-align: left;
+    letter-spacing: 0;
+    font-size: 12px;
+}
+#donate{
+    margin: auto;
+    padding:0;
+    text-align: center;
+    margin-left: 610px;
+    
+   
+}
+#face{
+    float: right;
+}
