--- a/css/style3.css
+++ b/css/style3.css
@@ -73,14 +73,25 @@ main{
     height: 100%;
     font-size: 15px;
 }
-article{
-    width: 100%;
-    height: 100%;
-    font-size: 15px;
+section{
+    width: 80%;
 }
 p{
+    margin: 0 auto;
+    padding: 0;
     width: 80%;
+}
+#about{
+    margin: auto 0;
+    width: 75%;
     font-size: 12px;
+    
+}
+#history{
+    margin: auto 0;
+    width: 75%;
+    font-size: 12px;
+    
 }
 footer{
     margin: auto;
