--- a/css/style3.css
+++ b/css/style3.css
@@ -1,11 +1,17 @@
+html, body{
+    margin: 0 auto;
+    padding: 0;
+    font-size: 62.5%;
+    box-sizing: border-box;
+    
+}
 body{
     margin: 0;
     padding: 0;
     background color: black;
     width: 100%;
     height: 100%;
-    font-size: 62.5%;
-    box-sizing: border-box;
+   
 
     
 }
@@ -24,7 +30,7 @@ header>a>img{
     width: 25%;
     height: 10rem;
     position: relative;
-    background: transparent;
+   
 
     
 }
@@ -68,31 +74,24 @@ a:hover{
     top: -250px;
     margin-right: 50px;
 }
-main{
-    width: 100%;
-    height: 100%;
-    font-size: 15px;
+#main{
+    width: 70%;
+    height: 500px;
+    margin: 0;
+    padding: 0;
+    background-color: azure;
 }
 section{
-    width: 80%;
-}
-p{
+    width: 100%;
     margin: 0 auto;
     padding: 0;
-    width: 80%;
-}
-#about{
-    margin: auto 0;
-    width: 75%;
-    font-size: 12px;
     
 }
-#history{
-    margin: auto 0;
-    width: 75%;
-    font-size: 12px;
-    
-}
+
+
+
+
+
 footer{
     margin: auto;
     padding: 0px;
