--- a/css/stylegm.css
+++ b/css/stylegm.css
@@ -5,12 +5,14 @@ html, body{
     box-sizing: border-box;
     width: 100%;
 }
+/*
 @media (max-width:791px) and (orientation landscape){
     section>nav>ul>li{
             font-size: 62.5%;
     }  
 }
-    
+*/
+
 
 header{
     margin: 0 auto;
@@ -92,4 +94,73 @@ nav>ul>li>a{
 a:hover{
 
     text-decoration: underline;
+}
+main{
+    margin: 0 auto;
+    padding: 0;
+    width: 75%;
+    height: 630px;
+}
+#general>span>{
+    display:inline-block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 400px;
+   
+    
+}
+main>span>img{
+    display: block;
+    margin: 0 auto;
+    float: left;
+    padding: 10px;
+    text-align: center;
+    height: 400px;
+    
+}
+article{
+    margin: 5px;
+    margin-left:10px;
+    padding: 10px;
+    display: block;
+    text-align:left;
+    font-size: 15px;
+}
+footer{
+    margin: auto;
+    padding: 0px;
+    width: 80%;
+    height: 150px;
+    text-align: center;
+    letter-spacing: 20px
+}
+#copy{
+    width: 100%;
+    margin: auto 0;
+    padding: 0;
+    text-align: left;
+    letter-spacing: 0;
+    font-size: 12px;
+}
+#donate{
+    margin: auto;
+    padding:0;
+    text-align: center;
+    margin-left: 590px;
+    
+   
+}
+#face{
+    float: right;
+}
+        
+        
+        
+        
+        
+        
+        
+        
+        
 }
