--- a/css/stylemedia.css
+++ b/css/stylemedia.css
@@ -93,3 +93,32 @@ a:hover{
 
     text-decoration: underline;
 }
+main{
+    margin: 0;
+    padding:0 ;
+    width: 80%;
+    height: 100%;
+    background-color: #fff;
+    
+}
+#media{
+    margin: 0;
+    padding: 0;
+    display: block;
+    text-align: center;
+    width: calc(100%/2);
+    background-color: #fff;
+    float: left;
+}
+#program{
+    margin-top:25px;
+    padding: 0;
+    display: block;
+    width: calc(100%/2);
+    height: 300px;
+    background-color: #fff;
+    float: left;
+    font-size: 15px;
+    text-align: left;
+    letter-spacing: 1px;
+}
