--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,103 @@
+html,body{    
+    margin:0;
+    padding:0;
+    font-size:62.5%;
+    box-sizing:border-box;
+    width:100%;
+}
+
+header{
+    width:100%;
+    margin:0;
+    padding:0;
+    font-size:1.8rem;
+    
+}
+
+#top{
+    margin:0;
+    padding:0;
+    height:11.5rem;
+    background-color:#e10105;
+}
+
+
+#top > #vet_logo{
+    display:inline-block;
+    margin:0;
+    padding:0;
+    width:20%;
+    clear:both;
+}
+
+#top >#vet_logo > img{
+    margin:0;
+    padding:0;
+    width:calc(230px/2);
+    background-color:#e10105;
+}
+
+#vet_logo{
+    width:20%;
+    text-align:center;
+    float:left;
+}
+
+
+#vet_logo > img{
+    float:right;
+    background-color:#e10105;
+}
+
+
+#top > nav{
+    margin:0;
+    padding:0;
+    height:11.5rem;
+    background-color:#e10105;
+    width:60%;
+    text-align: center;
+    float:left;
+}
+
+
+
+#sponsor > img {
+    margin:0;
+    padding:0;
+    float:left;
+}
+
+nav > ul{
+    margin:0 auto;
+    padding:0;
+    text-align:center;
+}
+
+nav > ul > li{
+    margin:0;
+    padding:0;
+    display:inline;
+    line-height:11.5rem;
+    width:calc(100%/5);
+    height:11.5rem;
+    float:left
+}
+
+nav > ul > li > a{
+    display:inline-block;
+    margin:0;
+    padding:0;
+    width:100%;
+    text-decoration:none;
+    color:#ffffff;
+}
+
+nav > ul > li > a:hover{
+    text-decoration:underline;
+    background-color:#e10105;
+}
+/*
 html, body{
     margin:0;
     padding:0;
@@ -8,43 +108,45 @@ html, body{
 }
 
 header{
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     width: 100%;
     font-size: 10px;
-    background-color:#e10105;
+    background-color: #e10105;
+    text-align: center;
 }
-section{
+#top{
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 11.5rem;
     background-color: #e10105;
 }
-section>span{
-    margin: 0 auto;
+
+#top>span{
+    margin: 0 ;
     padding: 0;
     display: inline-block;
-    clear: both;
-
-    
+    clear: both;   
 }
-section>span>img{
+#top>span>img{
     margin: 0;
     padding: 0;
-    width:calc(230px/2);
+    width:calc(250px/2);
     background-color: #e10105;
 
 }
 #vet_logo{
-    width: 15%;
+    width:17%;
     text-align: center;
     float: left;
+   
 }
 #vet_logo>img{
-    float: right;
+    float:right;
     background: #e10105;
 }
-section>nav>{
+#top>nav>{
     width: 100%;
     margin: 0;
     padding:0;
@@ -57,10 +159,10 @@ section>nav>{
 #sponsor>img{
     margin: 0;
     padding: 0;
-    float: left;
+    float:left;
 }
 nav>ul{
-    margin: 0 auto;
+    margin: 0;
     padding:0;
     text-align: center;
     text-transform: capitalize;
@@ -70,8 +172,8 @@ nav>ul>li{
     margin: 0;
     padding: 0;
     display: inline;
-    line-height: 18rem;
-    width:150px;
+    line-height: 11rem;
+    width:calc(60%/5);
     height: 11.5rem;
     float: left;
     background-color: #e10105;
@@ -79,8 +181,7 @@ nav>ul>li{
 nav>ul>li>a{
     display: inline-block;
     text-decoration: none;
-    color:white;
-    font-size: 18px;
+    color:#fff;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -89,12 +190,12 @@ a:hover{
 
     text-decoration: underline;
 }
+*/
 #flag{
     margin: 0;
     padding: 0;
     display: block;
     text-align: center;
-    margin-right: 178px;
     background: transparent;
     position: relative;
     opacity: .2;
@@ -106,7 +207,7 @@ main{
     margin: 0 auto; 
     padding: 0;
     box-sizing: border-box;
-    display: inline-block;
+    display: block;
     position: relative;
     text-align: center;
     top:-180px;
