--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,12 @@ html,body{
 
 header{
     width:100%;
+    height: 12rem;
     margin:0;
     padding:0;
     font-size:1.8rem;
+    background-color:#e10105;
+    
     
 }
 
@@ -26,25 +29,27 @@ header{
     display:inline-block;
     margin:0;
     padding:0;
-    width:20%;
     clear:both;
 }
 
-#top >#vet_logo > img{
+
+
+#top > #vet_logo > img{
     margin:0;
     padding:0;
-    width:calc(230px/2);
+    width:11rem;
+    max-height:11rem;
     background-color:#e10105;
 }
 
 #vet_logo{
-    width:20%;
     text-align:center;
     float:left;
+    width:20%;
 }
 
 
-#vet_logo > img{
+#vet_logo> img{
     float:right;
     background-color:#e10105;
 }
@@ -65,6 +70,9 @@ header{
 #sponsor > img {
     margin:0;
     padding:0;
+    width: 11rem;
+    max-height: 11rem;
+    background-color: #e10105;
     float:left;
 }
 
@@ -72,6 +80,7 @@ nav > ul{
     margin:0 auto;
     padding:0;
     text-align:center;
+    text-transform: capitalize;
 }
 
 nav > ul > li{
@@ -97,6 +106,7 @@ nav > ul > li > a:hover{
     text-decoration:underline;
     background-color:#e10105;
 }
+
 /*
 html, body{
     margin:0;
@@ -202,8 +212,7 @@ a:hover{
     max-height: 200px;
 }
 main{
-    width: 80%;
-    height: 450px;
+    width: 70%;
     margin: 0 auto; 
     padding: 0;
     box-sizing: border-box;
@@ -215,72 +224,57 @@ main{
    
 }
 
-section{
-    width: 80%;
-    height: 600px;
-    font-size: 16px;
-    margin: 0 auto;
-    padding: 0;  
-    display: inline;
-    text-align: center;
-}
 #sec1{
-    height: 100%;
     margin: auto 0;
     padding: 0;
-    width:100%;
+    width:60%;
+    margin-top: 20px;
+    line-height: 3rem; 
+    float: left;
 }
-section>ul>li{
+#sec1>li{
     box-sizing: border-box;
     display:inline block;
     list-style: none;
     text-align: left;
+    font-size: 18px;
 }
-#list ul{
-    margin: 0 auto;
-    margin-left: 180px;
-    padding: 50px;
-    width:30%;
-    height: 200px;
-    float: left;
-    text-align: left;
+#info_sec{
     display: block;
-    list-style-type: none;
-    
-
-}
-#info{
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
-    width:40%;
+    width:35%;
     height:400px;
     float: left;
+    font-size: 15px;
 }
 #gm{
     margin: 0 auto;
     padding: 0;
     color: blue;
-    font-size:12px;
+    font-size:15px;
     text-decoration: none;
 }
 #gm:hover{
     text-decoration: underline;
 }
-#sec2{
-    width: 80%;
+#contact{
+    width: 100%;
     height: 100px;
     font-size: 16px;
     margin: 0 auto;
     padding: 0;  
     box-sizing: border-box;
     display: block;
-    background-color: aqua;
+    float: left
 }
 footer{
     margin:0;
-    padding: 0px;
-    width: 80%;
+    padding: 0;
+    float: left;
+    width: 100%;
     height: 150px;
+    display: block;
     text-align: center;
     letter-spacing: 20px;
     position: relative;
@@ -288,23 +282,25 @@ footer{
     max-height: 150px;
 }
 #copy{
-    width: 100%;
-    margin-left: 100px;
+    width: 60%;
+    display: block;
+    text-align: center;
     padding: 0;
-    text-align: left;
     letter-spacing: 0;
     font-size: 12px;
 }
 #donate{
-    margin: auto;
+    display: block;
+    margin:0 auto;
     padding:0;
-    text-align: center;
-    margin-left: 465px;
     position: relative;
     top: -105px;
-    
    
 }
 #face{
+    display: inline-block;
+    margin:0;
+    padding: 0;
     float: right;
+    margin-right: 200px;
 }
