--- a/css/styleabout.css
+++ b/css/styleabout.css
@@ -111,7 +111,6 @@ nav > ul > li > a:hover{
 }
 #about{
     width: 80%;
-    height: 500px;
     margin: 0;
     padding: 0;
     
@@ -121,7 +120,6 @@ nav > ul > li > a:hover{
     margin: 0 auto;
     padding: 0;  
     text-align: left;
-    height: 600px;
     margin-left: 172px;
     position: relative;
     top: -130px;
@@ -170,12 +168,11 @@ footer{
     padding: 0;
     float: left;
     width: 100%;
-    height: 150px;
     display: block;
     text-align: center;
     letter-spacing: 20px;
     position: relative;
-    max-height: 150px;
+    top: -130px;
 }
 #copy{
     width: 60%;
