--- a/css/stylegm.css
+++ b/css/stylegm.css
@@ -110,7 +110,6 @@ main{
     margin: 0 auto;
     padding: 0;
     width: 75%;
-    height: 630px;
 }
 #general>span>{
     display:inline-block;
@@ -131,11 +130,9 @@ main>span>img{
     
 }
 article{
-    margin: 5px;
-    margin-left:10px;
+    margin: 0;
     padding: 10px;
-    display: block;
-    text-align:left;
+    width: auto;
     font-size: 15px;
 }
 footer{
@@ -143,12 +140,12 @@ footer{
     padding: 0;
     float: left;
     width: 100%;
+    height: 200px;
     display: block;
     text-align: center;
-    margin-top: 50px;
     letter-spacing: 20px;
     position: relative;
-    height: 150px;
+    margin-top: 200px
 }
 #copy{
     width: 60%;
@@ -158,7 +155,14 @@ footer{
     letter-spacing: 0;
     font-size: 12px;
 }
-
+#donate{
+    margin:0;
+    padding:0;
+    position: relative;
+    float: none;
+    display: block;    
+   
+}
 #face{
     display: inline-block;
     margin:0;
@@ -166,4 +170,3 @@ footer{
     float: right;
     margin-right: 200px;
 }
-        
